--- a/style.css
+++ b/style.css
@@ -47,6 +47,12 @@ footer {
     font-weight: 100;
 }
 
+.footer-link {
+    color: #171427; 
+    text-decoration: none; 
+    margin-left: 10px; 
+}
+
 .logo {
     width: auto;
     height: 48px;
